--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <div class="btn">
                         <p></p>
                     </div>
-                    <div class="btn">
-                        <p></p>
+                    <div class="btn" id="numPer">
+                        <p>%</p>
                     </div>
                     <div class="btn" id="numD">
                         <p>/</p>
@@ -89,6 +89,14 @@
                 <p id="clearHist">Clear</p>
             </div>
         </div>
+        <div id="colors">
+            <span id="spanYellow"></span>
+            <span id="spanRed"></span>
+            <span id="spanGreen"></span>
+            <span id="spanAqua"></span>
+            <span id="spanPink"></span>
+        </div>
+        
     <script src="./main.js"></script>
 </body>
 </html>
